	- fixed linux compilation of common.c/.h
	- do not quote the whole command-line on linux
	- report proper exitcode on linux
	- added create_thread() and wait_for_thread() to common.c/.h
	- moved command-line parameter creation into create_commandline()
	- added "parameters" parameter to execute_mame()
	- replaced all system() calls with execute_mame()
	- made redirecting of output and directory changing optional in execute_mame()
	- fixed warnings in common.c/.h when compiling with optimizations
	- mrt_system() did not return valid strings when no output was written at all
	- mrt_system() might have omitted the last block of the output data
	- added "stdout_out" parameter to execute_mame() to get the stdout data
	- removed option "test_createconfig"
	- added option "test_frontend" to test various frontend options
	- removed get_inifile()
	- added get_filename_base() to common.c/.h
	- fixed some GCC 4.6 compilation warnings
	- added option "use_slots" to test slots
	- improved configuration loading error messages
	- added -verifysoftware to "test_frontend"
	- only parse "devices" if necessary
	- execute_mame() now correctly returns if the execution was successful (fixes second autosave being executed when the first one failed)
	- bail out when -listxml failed
	- write all errors to stderr
	- improve some log messages
	- added makefile options DEBUG and LOG_ALLOC
	- removed obsolete wiki links from README
	
	create_report
	- added a summary at the end when "dokuwiki_format" is set
	- added support for multiple input folders (separated by ';')
	- updated comparison report to invoke pngcmp and output in HTML
	- added option "output_folder" for comparison reports
	- skip *_listsoftware.xml files
	- added option "recursive"
	- added header to docuwiki format
	- added command-line to docuwiki format
	- added speed comparison report (report_type 2)
	- fixed PNG comparison - images were in the wrong order
	- added support for slots
	- create "output_folder"